WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257905
[GLib] Process launching hangs if xdg-dbus-proxy is not installed
https://bugs.webkit.org/show_bug.cgi?id=257905
Summary
[GLib] Process launching hangs if xdg-dbus-proxy is not installed
Michael Catanzaro
Reported
2023-06-09 13:11:20 PDT
In
https://gitlab.gnome.org/GNOME/gnome-build-meta/-/issues/685
we discovered that process launching hangs if xdg-dbus-proxy is not installed. This is because we do a synchronous read() at the bottom of XDGDBusProxy::launch, and it never completes if spawning bwrap failed.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-06-09 13:50:53 PDT
Current behavior is we print the following and then hang forever: bwrap: execvp /usr/bin/foo: No such file or directory Proposed behavior is to print then crash (because this is not recoverable): bwrap: execvp /usr/bin/foo: No such file or directory ** (epiphany:203869): ERROR **: 15:49:53.627: Failed to fully launch dbus-proxy: Child process exited with code 1 Trace/breakpoint trap (core dumped)
Michael Catanzaro
Comment 2
2023-06-09 14:12:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14825
EWS
Comment 3
2023-08-18 06:23:32 PDT
Committed
267038@main
(971943d9b665): <
https://commits.webkit.org/267038@main
> Reviewed commits have been landed. Closing PR #14825 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug